flux/manifests/04-apps/artificial-intelligence/jupyterhub/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    app.kubernetes.io/name: jupyterhub
